# parquet-batch

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
src/parquetbatch/: reader.py
src/parquetreader/: reader.py
tests/: test_parquetbatch.py
