[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "parquet-batch"
version         = "0.0.1"
description     = "Pyarrow Dataset wrapper for batch reading parquet datasets as rows"
readme          = "README.md"
authors         = [{ name = "SMurphyDev", email="stephen@smurphydev.ie" }]
license         = { file = "LICENSE" }
classifiers     = [
    "LICENSE :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
keywords        = ["parquet", "batch"]
dependencies    = [
   "pyarrow >= 19.0.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "debugpy"]

#[project.urls]
#Homepage = "github"
#Issues = "github/issues"

[tool.pip-tools]
generate-hashes = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = [
    "tests"
]
markers = [
    "slow", # Marks a test as slow
]
addopts = "-m \"not slow\""
