[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "parquetreader"
version         = "0.0.1"
description     = "Pyarrow Dataset wrapper for reading parquet datasets as rows"
readme          = "README.md"
authors         = [{ name = "SMurphyDev", email="stephen@smurphydev.ie" }]
maintainers     = [{ name = "SMurphyDev", email="stephen@smurphydev.ie" }]
license         = { file = "LICENSE" }
classifiers     = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
keywords        = ["parquet", "reader"]
requires-python = ">=3.9"
dependencies    = [
   "pyarrow >= 19.0.0"
]
[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "debugpy", "build", "twine"]

[project.urls]
Homepage = "https://github.com/SMurphyDev/parquet-batch"
repository = "https://github.com/SMurphyDev/parquet-batch.git"
Issues = "https://github.com/SMurphyDev/parquet-batch/issues"

[tool.pip-tools]
generate-hashes = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = [
    "tests"
]
markers = [
    "slow", # Marks a test as slow
]
addopts = "-m \"not slow\""

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}"
]

